refactor: update code

--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
 								attachments required.
 							</p>
 						</div>
-						<div class="">
-							<div class="">
-								<img src="./assets/images/icon-any-file.svg" alt="" />
+						<div class="MainItem">
+							<div >
+								<img src="./assets/images/icon-any-file.svg" alt="" class="ItemImg1"/>
 							</div>
 							<h2 >Store any type of file</h2>
 							<p class="TextMain">
