refactor: update code

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 					</div>
 				</div>
 				<div class="MainBox">
-					<div class="">
+					<div >
 						<img
 							src="./assets/images/illustration-stay-productive.png"
 							alt="" class="ImageSize"
