refactor: update code

--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@
 							alt="" class="ImageSize"
 						/>
 					</div>
-					<div class="">
-						<h3 class="">Stay productive, wherever you are</h3>
-						<p class="">
+					<div >
+						<h3 class="header_3">Stay productive, wherever you are</h3>
+						<p class="HeaderText">
 							Never let location be an issue when accessing your files.
 							Fylo has you covered for all of your file storage needs.
 						</p>
