--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 							Never let location be an issue when accessing your files.
 							Fylo has you covered for all of your file storage needs.
 						</p>
-						<p class="">
+						<p class="HeaderText">
 							Securely share files and folders with friends, family and
 							colleagues for live collaboration. No email attachments
 							required.
