refactor: update code

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 							colleagues for live collaboration. No email attachments
 							required.
 						</p>
-						<p class="">
+						<p class="HeaderText">
 							See how Fylo works
 							<img src="./assets/images/icon-arrow.svg" alt="" />
 						</p>
