--- a/index.html
+++ b/index.html
@@ -135,9 +135,9 @@
 						</p>
 					</div>
 				</div>
-				<div class="MainBox">
-					<div class="class">
-						<p class="">
+				<div class="MainBox Review">
+					<div class="ReviewBox">
+						<p >
 							Fylo has improved our team productivity by an order of
 							magnitude. Since making the switch our team has become a
 							well-oiled collaboration machine.
