--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@
 							</div>
 						</div>
 					</div>
-					<div class="class">
-						<p class="">
+					<div class="ReviewBox">
+						<p >
 							Fylo has improved our team productivity by an order of
 							magnitude. Since making the switch our team has become a
 							well-oiled collaboration machine.
