--- a/index.html
+++ b/index.html
@@ -156,11 +156,11 @@
 							magnitude. Since making the switch our team has become a
 							well-oiled collaboration machine.
 						</p>
-						<div class="">
-							<div class=""><img src="." alt="" /></div>
-							<div class="">
-								<p class="">Bruce McKenzie</p>
-								<p class="">Founder & CEO, Huddle</p>
+						<div class="ReviewContent">
+							<div ><img src="./assets/images/profile-2.jpg" alt="" class="ProfileImg"/></div>
+							<div >
+								<p >Bruce McKenzie</p>
+								<p class="ProfileText">Founder & CEO, Huddle</p>
 							</div>
 						</div>
 					</div>
