refactor: update code

--- a/index.html
+++ b/index.html
@@ -180,8 +180,9 @@
 					</div>
 				</div>
 				<div class="MainBox">
-					<h4 class="">Get early access today</h4>
-					<p class="">
+					<div class="EarlyAccess">
+                  <h4 class="Header_4">Get early access today</h4>
+					<p class="TextMain">
 						It only takes a minute to sign up and our free starter tier is
 						extremely generous. If you have any questions, our support
 						team would be happy to help you.
