--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 						extremely generous. If you have any questions, our support
 						team would be happy to help you.
 					</p>
-					<div class="">
+					<div class="FormBox">
 						<input
 							type="text"
 							name=""
