refactor: update code

--- a/index.html
+++ b/index.html
@@ -194,8 +194,9 @@
 							id="email_id"
 							placeholder="example@email.com"
 						/>
-						<button class="">Get Started For Free</button>
+						<button class="ActionBtn">Get Started For Free</button>
 					</div>
+               </div>
 				</div>
 			</div>
 		</main>
