refactor: update code

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 						<input
 							type="text"
 							name=""
-							id="email_id"
+							id="email-id"
 							placeholder="example@email.com"
 						/>
 						<button class="ActionBtn">Get Started For Free</button>
