refactor: update code

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 		</main>
 		<footer id="footer">
 			<div class="FooterBox">
-				<img src="./assets/images/logo.svg" alt="" />
+				<img src="./assets/images/logo.svg" alt="" class="ImageSize" />
 			</div>
 			<div class="FooterBox">
 				<div class="">
