refactor: update code

--- a/index.html
+++ b/index.html
@@ -204,10 +204,10 @@
 			<div class="FooterBox">
 				<img src="./assets/images/logo.svg" alt="" class="ImageSize" />
 			</div>
-			<div class="FooterBox">
-				<div class="">
-					<img src="./assets/images/icon-location.svg" alt="" />
-					<p class="">
+			<div >
+				<div class="FooterInfo">
+					<img src="./assets/images/icon-location.svg" alt="" class="ImageSize FooterIcon" />
+					<p class="FooterText">
 						Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
 						do eiusmod tempor incididunt ut labore et dolore magna aliqua
 						6
