refactor: update code

--- a/index.html
+++ b/index.html
@@ -213,9 +213,9 @@
 						6
 					</p>
 				</div>
-				<div class="">
-					<p class="">
-						<img
+				<div >
+					<div class="FooterInfo">
+                  <img 
 							src="./assets/images/icon-phone.svg"
 							alt=""
 						/>+1-543-123-4567
