refactor: update code

--- a/index.html
+++ b/index.html
@@ -217,11 +217,13 @@
 					<div class="FooterInfo">
                   <img 
 							src="./assets/images/icon-phone.svg"
-							alt=""
-						/>+1-543-123-4567
-					</p>
-					<p class="">
-						<img src="./assets/images/icon-email.svg" alt="" />
+							alt="" class="ImageSize FooterIcon"
+						/>
+						<p class="FooterText">+1-543-123-4567</p>
+					</div>
+               <div class="FooterInfo">
+                  <img src="./assets/images/icon-email.svg" alt="" class="ImageSize FooterIcon"/>
+					<p class="FooterText">
 						example@fylo.com
 					</p>
 				</div>
