refactor: update code

--- a/index.html
+++ b/index.html
@@ -233,10 +233,16 @@
 					<p class="">Press</p>
 					<p class="">Blog</p>
 				</div>
-				<div class="">
-					<p class="">Contact Us</p>
-					<p class="">Terms</p>
-					<p class="">Privacy</p>
+				<div class="FooterAbout">
+					<p >About Us</p>
+					<p >jobs</p>
+					<p >Press</p>
+					<p >Blog</p>
+				</div>
+				<div class="FooterAbout">
+					<p >Contact Us</p>
+					<p >Terms</p>
+					<p >Privacy</p>
 				</div>
 				<div class="">
 					<img src="" alt="" /><img src="" alt="" /><img src="" alt="" />
