refactor: add class name

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 			</nav>
 		</header>
 		<main id="main">
-			<div class="Bg-Img">
+			<div class="Bg-Img Bg-desktop">
 				<img
 					src="./assets/images/illustration-intro.png"
 					alt=""
