refactor: update code

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 				/>
 			</div>
 			<div class="ContentMain BgMain">
-				<div class="MainBox">
-					<h1 id="header_1">
+				<div class="MainBox BgDesktop">
+					<h1 id="header_1" class="Header-1">
 						All your files in one secure location, accessible anywhere
 					</h1>
 					<p class="TextMain">
