refactor: update code

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 					<h1 id="header_1" class="Header-1">
 						All your files in one secure location, accessible anywhere
 					</h1>
-					<p class="TextMain">
+					<p class="TextMain DesktopText">
 						Fylo stores all your most important files in one secure
 						location. Access them wherever you need, share and collaborate
 						with friends family, and co-workers.
