refactor: update code

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 					</div>
 				</div>
 				<div class="MainBox">
-					<div >
+					<div class="RowContent">
 						<div class="MainItem">
 							<div >
 								<img
