refactor: update code

--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
 							<div>
 								<img
 									src="./assets/images/icon-access-anywhere.svg"
-									alt="" class="ItemImg"
+									alt=""
+									class="ItemImg"
 								/>
 							</div>
 							<h2 >Access your files, anywhere</h2>
