refactor: update code

--- a/index.html
+++ b/index.html
@@ -73,8 +73,12 @@
 							</p>
 						</div>
 						<div class="MainItem">
-							<div >
-								<img src="./assets/images/icon-security.svg" alt="" class="ItemImg"/>
+							<div>
+								<img
+									src="./assets/images/icon-security.svg"
+									alt=""
+									class="ItemImg"
+								/>
 							</div>
 							<h2 >Security you can trust</h2>
 							<p class="TextMain">
