--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 							</p>
 						</div>
 					</div>
-					<div >
+					<div class="RowContent">
 						<div class="MainItem">
 							<div >
 								<img
