refactor: update code

--- a/index.html
+++ b/index.html
@@ -93,7 +93,8 @@
 							<div>
 								<img
 									src="./assets/images/icon-collaboration.svg"
-									alt="" class="ItemImg1"
+									alt=""
+									class="ItemImg1"
 								/>
 							</div>
 							<h2 >Real-time collaboration</h2>
