refactor: update code

--- a/index.html
+++ b/index.html
@@ -105,8 +105,12 @@
 							</p>
 						</div>
 						<div class="MainItem">
-							<div >
-								<img src="./assets/images/icon-any-file.svg" alt="" class="ItemImg1"/>
+							<div>
+								<img
+									src="./assets/images/icon-any-file.svg"
+									alt=""
+									class="ItemImg1"
+								/>
 							</div>
 							<h2 >Store any type of file</h2>
 							<p class="TextMain">
