refactor: update code

--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@
 						</div>
 					</div>
 				</div>
-				<div class="MainBox">
-					<div >
+				<div class="MainBox RowImageContent">
+					<div>
 						<img
 							src="./assets/images/illustration-stay-productive.png"
 							alt="" class="ImageSize"
