refactor: update code

--- a/index.html
+++ b/index.html
@@ -125,7 +125,8 @@
 					<div>
 						<img
 							src="./assets/images/illustration-stay-productive.png"
-							alt="" class="ImageSize"
+							alt=""
+							class="ImageSize"
 						/>
 					</div>
 					<div>
