refactor: update code

--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
 							required.
 						</p>
 						<p class="HeaderText">
+							<span class="BorderBottom">
 							See how Fylo works
 							<img src="./assets/images/icon-arrow.svg" alt="" />
 						</p>
