--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
 							<span class="BorderBottom">
 							See how Fylo works
 							<img src="./assets/images/icon-arrow.svg" alt="" />
+                     </span>
 						</p>
 					</div>
 				</div>
