refactor: update code

--- a/index.html
+++ b/index.html
@@ -196,9 +196,15 @@
 							well-oiled collaboration machine.
 						</p>
 						<div class="ReviewContent">
-							<div ><img src="./assets/images/profile-3.jpg" alt="" class="ProfileImg"/></div>
-							<div >
-								<p >Iva Boyd</p>
+							<div>
+								<img
+									src="./assets/images/profile-3.jpg"
+									alt=""
+									class="ProfileImg"
+								/>
+							</div>
+							<div>
+								<p>Iva Boyd</p>
 								<p class="ProfileText">Founder & CEO, Huddle</p>
 							</div>
 						</div>
