refactor: update code

--- a/index.html
+++ b/index.html
@@ -214,20 +214,20 @@
 					<div class="EarlyAccess">
                   <h4 class="Header_4">Get early access today</h4>
 					<p class="TextMain">
-						It only takes a minute to sign up and our free starter tier is
-						extremely generous. If you have any questions, our support
-						team would be happy to help you.
-					</p>
-					<div class="FormBox">
-						<input
-							type="text"
-							name=""
-							id="email-id"
-							placeholder="example@email.com"
-						/>
-						<button class="ActionBtn">Get Started For Free</button>
+							It only takes a minute to sign up and our free starter tier
+							is extremely generous. If you have any questions, our
+							support team would be happy to help you.
+						</p>
+						<div class="FormBox">
+							<input
+								type="text"
+								name=""
+								id="email-id"
+								placeholder="example@email.com"
+							/>
+							<button class="ActionBtn">Get Started For Free</button>
+						</div>
 					</div>
-               </div>
 				</div>
 			</div>
 		</main>
