Revert "change commit"
This reverts commit 0cd6873b2008947485ed059c8f37cd0cca4f9eac.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 			sizes="32x32"
 			href="./assets/images/favicon-32x32.png"
 		/>
-      
+
 		<title>
 			Frontend Mentor | Fylo landing page with dark theme and features grid
 		</title>
@@ -142,7 +142,7 @@
 						</p>
 						<p class="HeaderText">
 							<span class="BorderBottom">
-                        See how Fylo works
+							See how Fylo works
 							<img src="./assets/images/icon-arrow.svg" alt="" />
                      </span>
 						</p>
@@ -212,8 +212,8 @@
 				</div>
 				<div class="MainBox">
 					<div class="EarlyAccess">
-						<h4 class="Header_4">Get early access today</h4>
-						<p class="TextMain">
+                  <h4 class="Header_4">Get early access today</h4>
+					<p class="TextMain">
 							It only takes a minute to sign up and our free starter tier
 							is extremely generous. If you have any questions, our
 							support team would be happy to help you.
@@ -235,58 +235,48 @@
 			<div class="FooterBox">
 				<img src="./assets/images/logo.svg" alt="" class="ImageSize" />
 			</div>
-			<div class="FooterDesktop">
+			<div >
 				<div class="FooterInfo">
-					<img
-						src="./assets/images/icon-location.svg"
-						alt=""
-						class="ImageSize FooterIcon"
-					/>
+					<img src="./assets/images/icon-location.svg" alt="" class="ImageSize FooterIcon" />
 					<p class="FooterText">
 						Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
 						do eiusmod tempor incididunt ut labore et dolore magna aliqua
 						6
 					</p>
 				</div>
-				<div>
+				<div >
 					<div class="FooterInfo">
-						<img
+                  <img 
 							src="./assets/images/icon-phone.svg"
-							alt=""
-							class="ImageSize FooterIcon"
+							alt="" class="ImageSize FooterIcon"
 						/>
 						<p class="FooterText">+1-543-123-4567</p>
 					</div>
-					<div class="FooterInfo">
-						<img
-							src="./assets/images/icon-email.svg"
-							alt=""
-							class="ImageSize FooterIcon"
-						/>
-						<p class="FooterText">example@fylo.com</p>
-					</div>
+               <div class="FooterInfo">
+                  <img src="./assets/images/icon-email.svg" alt="" class="ImageSize FooterIcon"/>
+					<p class="FooterText">
+						example@fylo.com
+					</p>
+				</div>
+				<div class="">
+					<p class="">About Us</p>
+					<p class="">jobs</p>
+					<p class="">Press</p>
+					<p class="">Blog</p>
 				</div>
 				<div class="FooterAbout">
-					<p>About Us</p>
-					<p>jobs</p>
-					<p>Press</p>
-					<p>Blog</p>
+					<p >About Us</p>
+					<p >jobs</p>
+					<p >Press</p>
+					<p >Blog</p>
 				</div>
 				<div class="FooterAbout">
-					<p>Contact Us</p>
-					<p>Terms</p>
-					<p>Privacy</p>
+					<p >Contact Us</p>
+					<p >Terms</p>
+					<p >Privacy</p>
 				</div>
-				<div class="FooterLogo">
-					<div class="svg">
-                  <img src="./assets/images/facebook.svg" alt="" class="ImageSize">
-               </div>
-					<div class="svg">
-						<img src="./assets/images/instagram.svg" alt="" class="ImageSize"/>
-					</div>
-					<div class="svg">
-                  <img src="./assets/images/twitter.svg" alt="" class="ImageSize" />
-               </div>
+				<div class="">
+					<img src="" alt="" /><img src="" alt="" /><img src="" alt="" />
 				</div>
 			</div>
 			<p class="attribution">
