refactor: update code

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 						<button class="ActionBtn">Get Started</button>
 					</div>
 				</div>
-				<div class="MainBox">
+				<div class="MainBox MarginTop">
 					<div class="RowContent">
 						<div class="MainItem">
 							<div>
