refactor: update code

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 							class="ImageSize"
 						/>
 					</div>
-					<div>
+					<div class="Box1">
 						<h3 class="header_3">Stay productive, wherever you are</h3>
 						<p class="HeaderText">
 							Never let location be an issue when accessing your files.
