refactor: update code

--- a/index.html
+++ b/index.html
@@ -148,8 +148,9 @@
 						</p>
 					</div>
 				</div>
-				<div class="MainBox Review">
-					<div class="ReviewBox">
+				<div class="MainBox">
+					<div class="Review">
+                  <div class="ReviewBox">
 						<p>
 							Fylo has improved our team productivity by an order of
 							magnitude. Since making the switch our team has become a
