--- a/index.html
+++ b/index.html
@@ -211,6 +211,7 @@
 						</div>
 					</div>
                </div>
+				</div>
 				<div class="MainBox">
 					<div class="EarlyAccess">
                   <h4 class="Header_4">Get early access today</h4>
