refactor: update code

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
 			<div class="FooterBox">
 				<img src="./assets/images/logo.svg" alt="" class="ImageSize" />
 			</div>
-			<div >
+			<div class="FooterContent">
 				<div class="FooterInfo">
 					<img src="./assets/images/icon-location.svg" alt="" class="ImageSize FooterIcon" />
 					<p class="FooterText">
