refactor: update code

--- a/index.html
+++ b/index.html
@@ -239,7 +239,11 @@
 			</div>
 			<div class="FooterContent">
 				<div class="FooterInfo">
-					<img src="./assets/images/icon-location.svg" alt="" class="ImageSize FooterIcon" />
+					<img
+						src="./assets/images/icon-location.svg"
+						alt=""
+						class="ImageSize FooterIcon"
+					/>
 					<p class="FooterText">
 						Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
 						do eiusmod tempor incididunt ut labore et dolore magna aliqua
