refactor: update code

--- a/index.html
+++ b/index.html
@@ -254,7 +254,8 @@
 					<div class="FooterInfo">
 						<img
 							src="./assets/images/icon-phone.svg"
-							alt="" class="ImageSize FooterIcon"
+							alt=""
+							class="ImageSize FooterIcon"
 						/>
 						<p class="FooterText">+1-543-123-4567</p>
 					</div>
