refactor: update code

--- a/index.html
+++ b/index.html
@@ -285,6 +285,7 @@
 				<div class="">
 					<img src="" alt="" /><img src="" alt="" /><img src="" alt="" />
 				</div>
+               <img src="./assets/images/twitter.svg" alt="" class="svg" />
 			</div>
 			<p class="attribution">
 				Challenge by
