refactor: format code

--- a/index.html
+++ b/index.html
@@ -265,13 +265,13 @@
 						example@fylo.com
 					</p>
 				</div>
-				<div class="">
-					<p class="">About Us</p>
-					<p class="">jobs</p>
-					<p class="">Press</p>
-					<p class="">Blog</p>
-				</div>
-				<div class="FooterAbout">
+					<div class="FooterAbout">
+						<p>About Us</p>
+						<p>jobs</p>
+						<p>Press</p>
+						<p>Blog</p>
+					</div>
+					<div class="FooterAbout">
 					<p >About Us</p>
 					<p >jobs</p>
 					<p >Press</p>
