--- a/index.html
+++ b/index.html
@@ -260,11 +260,13 @@
 						<p class="FooterText">+1-543-123-4567</p>
 					</div>
                <div class="FooterInfo">
-                  <img src="./assets/images/icon-email.svg" alt="" class="ImageSize FooterIcon"/>
-					<p class="FooterText">
-						example@fylo.com
-					</p>
-				</div>
+						<img
+							src="./assets/images/icon-email.svg"
+							alt=""
+							class="ImageSize FooterIcon"
+						/>
+						<p class="FooterText">example@fylo.com</p>
+					</div>
 					<div class="FooterAbout">
 						<p>About Us</p>
 						<p>jobs</p>
