refactor: update code

--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
 						/>
 						<p class="FooterText">+1-543-123-4567</p>
 					</div>
-               <div class="FooterInfo">
+					<div class="FooterInfo">
 						<img
 							src="./assets/images/icon-email.svg"
 							alt=""
@@ -274,21 +274,23 @@
 						<p>Blog</p>
 					</div>
 					<div class="FooterAbout">
-					<p >About Us</p>
-					<p >jobs</p>
-					<p >Press</p>
-					<p >Blog</p>
-				</div>
-				<div class="FooterAbout">
-					<p >Contact Us</p>
-					<p >Terms</p>
-					<p >Privacy</p>
-				</div>
-				<div class="">
-					<img src="" alt="" /><img src="" alt="" /><img src="" alt="" />
-				</div>
+						<p>Contact Us</p>
+						<p>Terms</p>
+						<p>Privacy</p>
+					</div>
+               
+            </div>
+            <div class="FooterLogo">
+               <img src="./assets/images/facebook.svg" alt="" class="svg" />
+               <div class="svg">
+                  <img
+                     src="./assets/images/instagram.svg"
+                     alt=""
+                     class="ImageSize"
+                  />
+               </div>
                <img src="./assets/images/twitter.svg" alt="" class="svg" />
-			</div>
+            </div>
 			<p class="attribution">
 				Challenge by
 				<a
