refactor: add in page link to button

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 						with friends family, and co-workers.
 					</p>
 					<div class="button">
-						<button class="ActionBtn">Get Started</button>
+						<a href="#email-id"><button class="ActionBtn">Get Started</button></a>
 					</div>
 				</div>
 				<div class="MainBox MarginTop">
