refactor: update code

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<script src="./assets/script/app.js" defer></script>
 		<link type="text/css" rel="stylesheet" href="./assets/style/style.css" />
 	</head>
-	<body id="body_container">
+	<body id="body_container" class="">
 		<header id="header">
 			<div class="Logo">
 				<img
