refactor: update code

--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
 						with friends family, and co-workers.
 					</p>
 					<div class="button">
-						<a href="#email-id"><button class="ActionBtn">Get Started</button></a>
+						<a href="#email_id"
+							><button  class="ActionBtn">Get Started</button></a
+						>
 					</div>
 				</div>
 				<div class="MainBox MarginTop">
