refactor: update code

--- a/index.html
+++ b/index.html
@@ -224,9 +224,8 @@
 						</p>
 						<div class="FormBox">
 							<input
-								type="text"
-								name=""
-								id="email-id"
+								type="email"
+								id="email_id"
 								placeholder="example@email.com"
 							/>
 							<button class="ActionBtn">Get Started For Free</button>
