refactor: update code

--- a/index.html
+++ b/index.html
@@ -223,6 +223,7 @@
 							support team would be happy to help you.
 						</p>
 						<div class="FormBox">
+							<div style="width: 100%">
                         <input
 								type="email"
 								id="email_id"
