refactor: update code

--- a/index.html
+++ b/index.html
@@ -229,8 +229,21 @@
 								id="email_id"
 								placeholder="example@email.com"
 							/>
-							<button class="ActionBtn">Get Started For Free</button>
+                     <span class="ErrorText">please enter a valid email</span>
+                     </div>
+							<button id="action_btn" class="ActionBtn">Get Started For Free</button>
 						</div>
+					</div>
+				</div>
+			</div>
+
+			<!-- modals -->
+         <div id="backdrop" class=""></div>
+			<div class="Modal">
+				<div id="gratitude">
+					<div>
+						<h2>Thanks for signing up</h2>
+					</div>
 					</div>
 				</div>
 			</div>
