--- a/index.html
+++ b/index.html
@@ -244,6 +244,12 @@
 					<div>
 						<h2>Thanks for signing up</h2>
 					</div>
+					<div>
+						<p style="font-size: 14px; line-height: 24px">
+							You now have free access to our free starter tier which is
+							extremely generous. If you have any questions, our support
+							team would be happy to help you.
+						</p>
 					</div>
 				</div>
 			</div>
