refactor: update code

--- a/index.html
+++ b/index.html
@@ -251,6 +251,7 @@
 							team would be happy to help you.
 						</p>
 					</div>
+					<button id="ok_btn" class="ActionBtn">Got it!</button>
 				</div>
 			</div>
 		</main>
