refactor: update code

--- a/index.html
+++ b/index.html
@@ -52,9 +52,7 @@
 						with friends family, and co-workers.
 					</p>
 					<div class="button">
-						<a href="#email_id"
-							><button  class="ActionBtn">Get Started</button></a
-						>
+						<button  class="ActionBtn"><a href="#email_id">Get Started</a></button>
 					</div>
 				</div>
 				<div class="MainBox MarginTop">
