refactor: update code

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 						with friends family, and co-workers.
 					</p>
 					<div class="button">
-						<button  class="ActionBtn"><a href="#email_id">Get Started</a></button>
+						<div  class="ActionBtn"><a href="#email_id">Get Started</a></div>
 					</div>
 				</div>
 				<div class="MainBox MarginTop">
