--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
 						with friends family, and co-workers.
 					</p>
 					<div class="button">
-						<div  class="ActionBtn"><a href="#email_id">Get Started</a></div>
+						<div class="ActionBtn">
+							<a href="#email_id">Get Started</a>
+						</div>
 					</div>
 				</div>
 				<div class="MainBox MarginTop">
