refactor: format code

--- a/index.html
+++ b/index.html
@@ -229,8 +229,10 @@
 									id="email_id"
 									placeholder="example@email.com"
 								/>
-                     <span class="ErrorText">please enter a valid email</span>
-                     </div>
+								<span class="ErrorText"
+									>please enter a valid email</span
+								>
+							</div>
 							<button id="action_btn" class="ActionBtn">Get Started For Free</button>
 						</div>
 					</div>
