refactor: format code

--- a/index.html
+++ b/index.html
@@ -233,7 +233,9 @@
 									>please enter a valid email</span
 								>
 							</div>
-							<button id="action_btn" class="ActionBtn">Get Started For Free</button>
+							<button id="action_btn" class="ActionBtn">
+								Get Started For Free
+							</button>
 						</div>
 					</div>
 				</div>
