--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
 					href="https://www.frontendmentor.io?ref=challenge"
 					target="_blank"
 					>Frontend Mentor</a
-				>. Coded by <a href="#">Babboe1</a>.
+				>. Coded by <a href="#">babboeCodes</a>.
 			</p>
 		</footer>
 	</body>
